# fintech-using-autogen

./: .gitignore  01_project_setup_todo.ipynb  README.md  UseCase.md  main.py  pyproject.toml
fintech_autogen/: __init__.py
fintech_autogen/agents/: __init__.py  financial_educator.py  market_analyst.py  portfolio_manager.py  research_agent.py  risk_assessment.py
fintech_autogen/database/: __init__.py  db_setup.py  queries.py
fintech_autogen/knowledge_base/: __init__.py  kb_setup.py
fintech_autogen/knowledge_base/kb_texts/: etf_knowledge.txt  finance_sector.txt  general_finance.txt  healthcare_sector.txt  investment_strategies.txt  market_analysis.txt  risk_management.txt  tech_sector.txt
fintech_autogen/teams/: __init__.py  financial_education_team.py  market_research_team.py  master_orchestrator.py  portfolio_optimization_team.py
fintech_autogen/tools/: __init__.py  external_tools.py  kb_tools.py
fintech_autogen/ui/: __init__.py  streamlit_app.py
